[workspace]
resolver = "2"
members = [
    "ui",
    "web",
    "desktop",
    "mobile",
    "api",
]

[workspace.dependencies]
twenty-first = "0.50"
dioxus = { version = "0.7.1", features = ["router", "logger"] }
dioxus-logger = "0.7.1"
getrandom = { version = "0.3", features = ["wasm_js"] }
neptune-types = {git = "https://github.com/Neptune-Crypto/neptune-types.git", rev = "eb9d1d337b8108dafc2c640f7fd617ffe3c943e8"}
thiserror = "1.0"
serde_json = "1.0.145"

# workspace
ui = { path = "ui" }
api = { path = "api" }

[profile]

[profile.wasm-dev]
inherits = "dev"
opt-level = 1

[profile.server-dev]
inherits = "dev"

[profile.android-dev]
inherits = "dev"

#[patch.crates-io]
#indexmap = { version = "2.11.0" }
#indexmap = { git = "https://github.com/bluss/indexmap.git" }
#indexmap = { git = "ssh://git@github.com/bluss/indexmap.git" }
