[package]
name = "api"
version = "0.1.0"
edition = "2021"

[dependencies]
dioxus = { workspace = true, features = ["fullstack"] }
# Add serde if your server functions use custom serializable types
serde = { version = "1.0", features = ["derive"], optional = true }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
neptune-cash = { git = "https://github.com/Neptune-Crypto/neptune-core.git", rev = "8698d309" }
chrono = "=0.4.34"
tarpc = { version = "^0.34.0", features = ["serde-transport-json", "serde-transport", "tokio1", "tcp"] }
#tokio = { version = "1", features = ["full", "tracing"] }
