[package]
name = "api"
version = "0.1.3"
edition = "2021"

[dependencies]
dioxus = { workspace = true, features = ["fullstack"] }
# Add serde if your server functions use custom serializable types
serde = { version = "1.0", features = ["derive"] }

thiserror.workspace = true
neptune-types.workspace = true
twenty-first.workspace = true
dioxus-logger.workspace = true
serde_json.workspace = true

tokio = "1.45.1"
#serde_json = "1.0.140"
bincode = "1.3"
serde-json-wasm = {version = "1.0.1", optional = true}
reqwest = { version = "0.12.24", default-features = false, features = ["json", "rustls-tls"] }
num-traits = "0.2.19"
strum = { version = "0.27.2", features = ["derive"] }
anyhow = "1.0.100"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
neptune-cash = { git = "https://github.com/Neptune-Crypto/neptune-core.git", rev = "v0.5.0" }
#neptune-cash = { git = "https://github.com/Neptune-Crypto/neptune-core.git", rev = "08a26dd134c5205017633e11a266ccd704d522d2" }
#neptune-cash = { git = "https://github.com/dan-da/neptune-core.git", rev = "2353aec5adcb61c4da37f271aa82cec3fe6d191b" }
#neptune-cash = { git = "https://github.com/Neptune-Crypto/neptune-core.git", rev = "2f360c778498948ff787497e28c7606751844577" }
#neptune-cash = { path = "../../neptune-core" }
#chrono = "^0.4.34"
#chrono = "=0.4.34"
tarpc = { version = "^0.34.0", features = ["serde-transport-json", "serde-transport", "tokio1", "tcp"] }
#tokio = { version = "1", features = ["full", "tracing"] }

[features]
web = ["dep:serde-json-wasm"]
server = ["dioxus/server"]

