[package]
name = "desktop"
version = "0.1.0"
edition = "2021"

[dependencies]
dioxus = { workspace = true, features = ["fullstack"] }
dioxus-logger.workspace = true
ui = { workspace = true }

[features]
default = []
desktop = ["dioxus/desktop", "ui/dioxus-desktop"]
server = ["dioxus/server", "ui/server"]

[[bin]]
name = "neptune-gui"
path = "src/main.rs"
