[package]
name = "desktop"
version = "0.1.1"
edition = "2021"

[dependencies]
dioxus = { workspace = true, features = ["fullstack", "desktop", "server"] }
dioxus-logger.workspace = true
ui = { workspace = true, features = ["dioxus-desktop", "server"] }

[features]
desktop = ["dioxus/desktop", "ui/dioxus-desktop"]
server = ["dioxus/server", "ui/server"]

[[bin]]
name = "neptune-proton"
path = "src/main.rs"
