[package]
name = "desktop"
version = "0.2.0"
edition = "2021"

[dependencies]
dioxus = { workspace = true, features = ["fullstack", "desktop", "server"] }
dioxus-logger.workspace = true
ui = { workspace = true, features = ["dioxus-desktop", "server"] }
image.workspace = true

[build-dependencies]
# for binding icon.ico to neptune-proton.exe. see build.rs.
winres = "0.1"

[features]
desktop = ["dioxus/desktop", "ui/dioxus-desktop"]
server = ["dioxus/server", "ui/server"]

[[bin]]
name = "neptune-proton"
path = "src/main.rs"
