[package]
name = "ui"
version = "0.1.0"
edition = "2021"

[dependencies]
dioxus = { workspace = true, features = ["web", "fullstack", "logger"] }
dioxus-logger.workspace = true
api.workspace = true
twenty-first.workspace = true
dioxus-web = "0.6.3"
qrcode = "0.12"
neptune-types.workspace = true
web-sys = { version = "0.3.69", features = [
  "console",
  'Clipboard',
  'Window',
  'Navigator',
  'MediaDevices',
  'MediaStream',
  'MediaStreamConstraints',
  'MediaTrackConstraints',
  'MediaDeviceKind',
  'MediaDeviceInfo',
  'MediaStreamTrack',
  'HtmlVideoElement',
  'HtmlCanvasElement',
  'CanvasRenderingContext2d',
  'ImageData',
]}
# For handling JavaScript Promises in Rust
wasm-bindgen = "0.2.92"
wasm-bindgen-futures = "0.4.42"
gloo-timers = { version = "0.3.0", features = ["futures"] }
num-traits = "0.2.19"
serde-json-wasm = "1.0.1"
itertools = "0.14.0"
tokio = { version = "1.47.1", features = ["time"] }
dioxus-clipboard = "0.2.0"
rqrr = "0.10"
js-sys = "0.3.69"
anyhow = "1.0.100"
image = { version = "0.25", features = ["jpeg"] }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
camera_capture = "0.5.0"
# For native camera access
base64 = "0.22"
dioxus-desktop = { version = "0.6.3", optional = true }

#[features]
# This links the optional dioxus-desktop dependency to the existing "desktop"
# feature that is passed in from your main desktop application's Cargo.toml.
#desktop = ["dioxus/desktop"]
