[package]
name = "ui"
version = "0.1.0"
edition = "2021"

[dependencies]
dioxus = { workspace = true, features = ["web", "fullstack", "logger"] }
dioxus-logger.workspace = true
api.workspace = true
thiserror.workspace = true
twenty-first.workspace = true
dioxus-web = "0.7.1"
qrcode = "0.12"
neptune-types.workspace = true
serde_json.workspace = true

web-sys = { version = "0.3.69", features = [
  "console",
  'Clipboard',
  'Window',
  'Navigator',
  'MediaDevices',
  'MediaStream',
  'MediaStreamConstraints',
  'MediaTrackConstraints',
  'MediaDeviceKind',
  'MediaDeviceInfo',
  'MediaStreamTrack',
  'HtmlVideoElement',
  'HtmlCanvasElement',
  'CanvasRenderingContext2d',
  'ImageData',
]}
# For handling JavaScript Promises in Rust
wasm-bindgen = "0.2.92"
wasm-bindgen-futures = "0.4.42"
gloo-timers = { version = "0.3.0", features = ["futures"] }
num-traits = "0.2.19"
serde-json-wasm = "1.0.1"
itertools = "0.14.0"
tokio = { version = "1.47.1", features = ["time", "sync", "macros"] }
dioxus-clipboard = "0.2.0"
rqrr = "0.10"
js-sys = "0.3.69"
anyhow = "1.0.100"
image = { version = "0.25", features = ["jpeg"] }
base64 = "0.22"
web-time = { version = "1.1.0", features = ["serde"] }

# for upload and read SVG QR files.
resvg = "0.41.0"
usvg = "0.41.0"
tiny-skia = "0.11.4"
quick-xml = "0.31.0"
futures = "0.3.31"
futures-channel = "0.3.31"
chrono = { version = "0.4.42", features = ["wasm-bindgen"] }
num-bigint = "0.4.6"
strum = { version = "0.27.2", features = ["derive"] }
# end SVG QR files

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
camera_capture = "0.5.0"
# For native camera access
dioxus-desktop = { version = "0.7.1", optional = true }
rfd = { version = "0.14.1", default-features = false, features = ["tokio", "xdg-portal"] }

[features]
server = ["api/server"]
