[package]
name = "ui"
version = "0.1.3"
edition = "2021"

[dependencies]
dioxus = { workspace = true, features = ["logger"] }
dioxus-logger.workspace = true
api.workspace = true
thiserror.workspace = true
twenty-first.workspace = true
dioxus-web = "0.7.1"
qrcode = "0.12"
neptune-types.workspace = true
serde_json.workspace = true
serde.workspace = true
image.workspace = true

web-sys = { version = "0.3.69", features = [
  "console",
  'Clipboard',
  'Window',
  'Navigator',
  'MediaDevices',
  'MediaStream',
  'MediaStreamConstraints',
  'MediaTrackConstraints',
  'MediaDeviceKind',
  'MediaDeviceInfo',
  'MediaStreamTrack',
  'HtmlVideoElement',
  'HtmlCanvasElement',
  'CanvasRenderingContext2d',
  'ImageData',
], optional = true}

wasm-bindgen = {version = "0.2", optional = true}
wasm-bindgen-futures = {version = "0.4.42", optional = true}
gloo-timers = { version = "0.3.0", features = ["futures"], optional = true }
serde-json-wasm = {version = "1.0.1", optional = true}
chrono = { version = "0.4.42", features = ["wasm-bindgen"] }

num-traits = "0.2.19"
itertools = "0.14.0"
tokio = { version = "1.47.1", features = ["time", "sync", "macros"] }
rqrr = "0.10"
base64 = "0.22"
web-time = { version = "1.1.0", features = ["serde"] }

# for upload and read SVG QR files.
resvg = "0.41.0"
usvg = "0.41.0"
tiny-skia = "0.11.4"
quick-xml = "0.31.0"
futures = "0.3.31"
futures-channel = "0.3.31"
num-bigint = "0.4.6"
strum = { version = "0.27.2", features = ["derive"] }
# end SVG QR files

js-sys = {version = "0.3", optional = true}

#[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
dioxus-desktop = { version = "0.7.1", optional = true}
rfd = { version = "0.14.1", default-features = false, features = ["tokio", "xdg-portal"]}
dioxus-clipboard = "0.3.0"

# for linux/gtk qr_scanner.rs. can be removed when dioxus issue 5037 resolved.
nokhwa = { version = "0.10", features = ["input-native", "output-threaded"], optional = true }

[features]
dioxus-desktop = ["dep:dioxus-desktop", "dep:nokhwa"]
web = ["dioxus/web", "api/web", "dep:js-sys", "dep:web-sys", "dep:wasm-bindgen", "dep:wasm-bindgen-futures", "dep:gloo-timers", "dep:serde-json-wasm"]
server = ["dioxus/server", "api/server"]
