[package]
name = "web"
version = "0.1.0"
edition = "2021"

[dependencies]
dioxus = { workspace = true, features = ["router"] }
dioxus-logger.workspace = true
ui.workspace = true
getrandom.workspace = true
serde_json = "1.0.140"
console_error_panic_hook = "0.1.7"


[features]
default = []
web = ["dioxus/web"]
server = ["dioxus/server"]
