[package]
name = "web"
version = "0.1.0"
edition = "2021"

[dependencies]
dioxus = { workspace = true, features = ["fullstack"] }
dioxus-logger.workspace = true
ui.workspace = true
getrandom.workspace = true
serde_json = "1.0.140"


[features]
default = []
web = ["dioxus/web"]
server = ["dioxus/server", "ui/server"]
